fix: no more share image scrollbars

--- a/src/global.css
+++ b/src/global.css
@@ -106,3 +106,7 @@ body {
 .dark .custom-scrollbar:hover::-webkit-scrollbar-thumb {
   background-color: rgb(82 82 82 / 0.8);
 }
+
+.deep-overflow-visible * {
+  overflow: visible;
+}
